updated price and data

--- a/checkout.html
+++ b/checkout.html
@@ -176,7 +176,7 @@
                                 <li><b>End Date:</b> April 14, 2020, 8 p.m.</li>
                                 <li><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
                                 <li><b>Venue:</b> Online Event</li>
-                                <p style="font-size:25px;padding-top:5px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;497</span></p>
+                                <p style="font-size:25px;padding-top:5px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;597</span></p>
                             </ul>
                             <div style="padding:0px 10px;">
                                 <a data-toggle="modal" data-target="#razorpay" class="btn-green btn-block caps cursor-pointer" style="padding:10px;background-color:#2fbe6d;border-radius:10px;color:#fff;font-size:20px;text-align:center;">Buy Tickets</a>
@@ -316,7 +316,7 @@
                             <li style="padding-bottom:5px;"><b>End Date:</b> April 14, 2020, 8 p.m.</li>
                             <li style="padding-bottom:5px;"><b>Lecture timings:</b> 6 p.m. - 8 p.m.</li>
                             <li style="padding-bottom: 5px;"><b>Venue:</b> Online Event</li>                       
-                            <p style="font-size: 25px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;497</span></p>
+                            <p style="font-size: 25px;"> <strike><b>&#8377;1,997</b></strike> <span style="color:#2fbe6d;">&#8377;597</span></p>
                         </ul>
                         <div style="padding: 0px 10px;">
                             <a data-toggle="modal" data-target="#razorpay" class="btn-green btn-block caps" style="padding: 5px;background-color:#2fbe6d;border-radius: 10px;color:#fff;font-size: 23px;text-align:center;">Buy Tickets</a>
@@ -389,13 +389,35 @@
             </div>
         </div>
         <!-- content 1 -->
-        <div class="container-fluid" style="background-color:#000;">
+        <div class="container-fluid" style="background-color:#000;padding-bottom:70px;">
             <div class="container" style="padding:30px 0px;margin:0 auto;">
                 <b class="font-Oswald-b" style="display:block;text-align:center;font-size:16px;color:rgba(255, 255, 255, 0.53);"> Copyright &copy; 2019 All Right Reserved. Designed By <a rel="nofollow" href="https://www.quadbtech.com" target="_blank">QuadBTech</a></b>
             </div>
         </div>
+    
+        <!-- sharing button mobile -->
+        <div id="st-2" class=" st-sticky-share-buttons st-left st-toggleable st-has-labels st-show-total " style="bottom:0;display:flex;left:0;right:0;top:auto;width:100%;">
+            <div class="st-total" style="padding:12px 0px;width:100%;font-size:13px;">
+                <span class="st-label">1.1k</span>
+                <span class="st-shares">
+                Shares
+                </span>
+            </div>
+            <div class="st-btn" onclick="window.location = 'https://www.facebook.com/sharer.php?display=page&u=https%3A%2F%2Fcryptonite.finstreet.in%2F'" target="_blank" data-network="facebook" style="display:flex;justify-content:center;width:100%;height:auto;">
+                <img alt="facebook sharing button" style="width:40px;height:40px" src="https://platform-cdn.sharethis.com/img/facebook.svg">
+            </div>
+            <div class="st-btn" onclick="window.location ='https://twitter.com/intent/tweet?text=India%27s%20Biggest%20Cryptocurrency%20Event%20%7C%20Register%20Now&url=https%3A%2F%2Fcryptonite.finstreet.in'" data-network="twitter" style="display:flex;justify-content:center;width:100%;height:auto;">
+                <img alt="twitter sharing button" style="width:40px;height:40px" src="https://platform-cdn.sharethis.com/img/twitter.svg">
+            </div>
+            <div class="st-btn" onclick="window.location = 'mailto:support@finstreet.in'" data-network="email" style="display:flex;justify-content:center;width:100%;height:auto;">
+                <img alt="email sharing button" style="width:40px;height:40px" src="https://platform-cdn.sharethis.com/img/email.svg">
+            </div>
+            <div class="st-btn" onclick="window.location = 'whatsapp://send?text=If You Have To START ALL OVER FROM ZERO... WHAT WOULD YOU DO FROM DAY 1 TO DAY 30, STEP-BY-STEP? https%3A%2F%2Fcryptonite.finstreet.in'" data-action="share/whatsapp/share" data-network="whatsapp" style="display:flex;justify-content:center;width:100%;height:auto;">
+                <img alt="whatsapp sharing button" style="width:40px;height:40px" src="https://platform-cdn.sharethis.com/img/whatsapp.svg">
+            </div>
+        </div>
+        <!--end sharing button  -->
     </div>
-     
     <!-- razorpay popup -->
     <div class="modal fade" id="razorpay" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
         <div class="modal-dialog" style="max-width:920px;">
@@ -461,14 +483,14 @@
                                     <tr class="cart-subtotal">
                                         <th>Discount(%)</th>
                                         <td><strong>
-                                            <span>-<span class="discount">75%</span></span>
+                                            <span>-<span class="discount">70%</span></span>
                                             </strong> 
                                         </td>
                                     </tr>  
                                     <tr class="order-total">
                                         <th>Total</th>
                                         <td><strong>
-                                                <span>&#8377;<span name="amount" class="modaltotal">497</span></span>
+                                                <span>&#8377;<span name="amount" class="modaltotal">597</span></span>
                                             </strong> 
                                         </td>
                                     </tr>    
@@ -704,7 +726,7 @@
                         postcode : $("#postcode").val(),
                         other_details : $("#other_details").val(),
                         productName :  "Crypto-Nite 2020",
-                        amount : "497",
+                        amount : "597",
                         'referral_id': referral_id,
                         password: $("#password").val()
 
@@ -716,8 +738,8 @@
                             // alert("checked out");
                             var order_id = data.id;
                             var options = {
-                                "key": "rzp_live_LSedTe83FzVuTe", // Enter the Key ID generated from the Dashboard rzp_test_Deii5btTqdfYUu rzp_live_LSedTe83FzVuTe
-                                "amount": parseInt(497*100), // Amount is in currency subunits. Default currency is INR. Hence, 29935 refers to 29935 paise or INR 299.35.    
+                                "key": "rzp_live_LSedTe83FzVuTe", //rzp_test_BAnreND3t2AMOK test key // Enter the Key ID generated from the Dashboard rzp_test_Deii5btTqdfYUu rzp_live_LSedTe83FzVuTe
+                                "amount": parseInt(597*100), // Amount is in currency subunits. Default currency is INR. Hence, 29935 refers to 29935 paise or INR 299.35.    
                                 "currency": "INR",    
                                 "name": "Finstreet",
                                 "description": "Crypto-Nite",
@@ -735,7 +757,7 @@
                                             id: data.id,
                                             productName : "Finstreet",
                                             razorpay_payment_id : razorpay_payment_id,
-                                            amount : 497,
+                                            amount : 597,
                                             email : $("#email").val()
                                         },
                                         success:function(data){
