changes in checkout page

--- a/checkout.html
+++ b/checkout.html
@@ -554,7 +554,7 @@
                         </div> -->
                         
                            
-                        <button type="submit" id="razorpaycheckout" class="btn btn-primary buttonStyle">Place Order</button>
+                        <button type="submit" id="razorpaycheckout" class="btn btn-primary buttonStyle mb-5">Place Order</button>
                     </div>
                 </div>
             </div>
