changes in user dashboard

--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -169,6 +169,24 @@
                             </div>
                         </div>
                         <div class="w-100 mt-3" style="border-radius: 10px; border: 1px solid lightgray;">
+                            <div class="container-fluid">
+                                <div class="row py-2">
+                                    <div class="col-md-2 d-flex justify-content-center align-items-center">
+                                        <img src="images/glossary-icon.png" class="w-100">
+                                    </div>
+                                    <div class="col-md-7">
+                                        <h4 class="font-poppins-bold">Crypto Currency Glossary</h4>
+                                        <p class="font-poppins-regular">A glossary of Crypto Currency explaining all the basic terminologies.</p>
+                                    </div>
+                                    <div class="col-md-3 pl-0 d-flex justify-content-center align-items-center">
+                                        <div class="w-100 cursor-pointer" style="border-radius: 10px; background-color: #00ABC9; color: white; ">
+                                            <h5 class="font-poppins-bold m-0 p-2 text-center" onclick="window.open('https://cryptonite.finstreet.in/docs/Finstreet Crypto Glossary.pdf','_blank');" >REDEEM<br>NOW</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-100 mt-3" style="border-radius: 10px; border: 1px solid lightgray;">
                             <div class="container-fluid position-relative p-0">
                                 <div class="w-100 h-100 position-absolute" style="background-color: black; opacity: 0.7; border-radius: 10px; z-index: 20;"></div>
                                 <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center" style="z-index: 30;">
@@ -443,6 +461,24 @@
                             </div>
                         </div>
                         <div class="w-100 mt-3" style="border-radius: 10px; border: 2px solid lightgray;">
+                            <div class="container-fluid">
+                                <div class="row py-2">
+                                    <div class="col-md-2 d-flex justify-content-center align-items-center">
+                                        <img src="images/glossary-icon.png" class="w-100">
+                                    </div>
+                                    <div class="col-md-7">
+                                        <h4 class="font-poppins-bold" style="font-size: 2rem;">Crypto Currency Glossary</h4>
+                                        <p class="font-poppins-regular" style="font-size: 1.5rem;">A glossary of Crypto Currency explaining all the basic terminologies.</p>
+                                    </div>
+                                    <div class="col-md-3 pl-0 d-flex justify-content-center align-items-center">
+                                        <div class="w-100 cursor-pointer" style="border-radius: 10px; background-color: #00ABC9; color: white; ">
+                                            <h5 class="font-poppins-bold m-0 p-2 text-center" onclick="window.open('https://cryptonite.finstreet.in/docs/Finstreet Crypto Glossary.pdf','_blank');" style="font-size: 2rem;">REDEEM<br>NOW</h5>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="w-100 mt-3" style="border-radius: 10px; border: 2px solid lightgray;">
                             <div class="container-fluid position-relative p-0">
                                 <div class="w-100 h-100 position-absolute" style="background-color: black; opacity: 0.7; border-radius: 10px; z-index: 20;"></div>
                                 <div class="position-absolute w-100 h-100 d-flex justify-content-center align-items-center" style="z-index: 30;">
@@ -650,7 +686,7 @@
         });
 
         // The data/time we want to countdown to
-        var countDownDate = new Date("apr 7, 2020 24:00:00").getTime();
+        var countDownDate = new Date("apr 9, 2020 24:00:00").getTime();
         var countDownDate1 = new Date("apr 11, 2020 24:00:00").getTime();
 
         // Run myfunc every second
