--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -146,6 +146,16 @@
                         </div>
                     </div>
 
+                    <!-- get started with crypto -->
+                    <div class="bg-white w-100 mt-3 p-3" style="border-radius: 30px;">
+                        <h3 class="text-center font-poppins-bold mb-3">Get started with crypto</h3>
+                        <div class="w-100" style="border-radius: 10px; border: 1px solid lightgray;">
+                            <h5 class="font-poppins-bold w-100 text-center p-3">create a free account now.</h5>
+                            <div class="mb-3 d-flex justify-content-center align-items-center w-100">
+                                <button class="btn btn-primary font-poppins-bold" rel=”nofollow” onclick="window.location = 'https://wazirx.com/invite/sp7pvbt6'">Register Now</button>
+                            </div>                            
+                        </div>
+                    </div>
 
                     <!-- redeem your unlockables -->
                     <div class="bg-white w-100 mt-3 p-3 mb-5" style="border-radius: 30px;">
@@ -439,6 +449,18 @@
                         </div>
                     </div>
 
+                    <!-- affiliate -->
+                    <div class="bg-white w-100 mt-3 p-3" style="border-radius: 30px;">
+                        <h3 class="text-center font-poppins-bold mb-3" style="font-size: 3rem;">Get started with crypto</h3>
+                        <div class="w-100" style="border-radius: 10px; border: 1px solid lightgray;">
+                            <h5 class="font-poppins-bold w-100 text-center p-3" style="font-size: 2rem;">create a free account now.</h5>
+                            <div class="mb-3 d-flex justify-content-center align-items-center w-100">
+                                <button class="btn btn-primary font-poppins-bold" rel=”nofollow” onclick="window.location = 'https://wazirx.com/invite/sp7pvbt6'" style="font-size: 2rem;">Register Now</button>
+                            </div>
+                            
+                        </div>
+                    </div>
+
                     <!-- redeem your unlockables -->
                     <div class="bg-white w-100 mt-3 p-3 mb-5" style="border-radius: 30px;">
                         <h3 class="text-center font-poppins-bold mb-3" style="font-size: 3rem;">REDEEM YOUR UNLOCKABLES</h3>
@@ -686,7 +708,7 @@
         });
 
         // The data/time we want to countdown to
-        var countDownDate = new Date("apr 9, 2020 24:00:00").getTime();
+        var countDownDate = new Date("apr 11, 2020 24:00:00").getTime();
         var countDownDate1 = new Date("apr 11, 2020 24:00:00").getTime();
 
         // Run myfunc every second
